--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 /* src/index.css */
 
 body {
-  background-color: #f8f9fa;
+  background-color: #F6F7F9;
+}
+header{
+  background-color: blue !important;
 }
